fix alignment of h2 element on destination page

--- a/styles.css
+++ b/styles.css
@@ -161,6 +161,8 @@ a {
     flex-direction: column;
     align-items: flex-start;
     padding: 50px 150px;
+    margin-top: 0;
+    padding-top: 0;
 }
 
 #dest-img {
@@ -251,7 +253,7 @@ a {
     margin-right: 90px;
 }
 
-.h2-crew, .h2-tech {
+.h2-crew, .h2-tech, .h2-destination {
     font-size: 1.5rem;
     line-height: 19.8%;
     letter-spacing: 0;
